src/test/ui/rfc-2565-param-attrs/param-attrs-feature-gate.stderr
error: documentation comments cannot be applied to function parameters
  --> $DIR/param-attrs-feature-gate.rs:6:5
   |
LL |     /// Foo
   |     ^^^^^^^ doc comments are not allowed here

error: aborting due to previous error

